added blog website folder

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
           <li class="navbar-item">
             <a href="#" class="navbar-link hover:underline" data-nav-link>Home</a>
           </li>
+          <li class="navbar-item">
+            <a href="create.html" class="navbar-link hover:underline" data-nav-link>Create</a>
+          </li>
 
           <li class="navbar-item">
             <a href="recent-posts.html" class="navbar-link hover:underline" data-nav-link>Recent Post</a>
@@ -1088,15 +1091,6 @@
 
         </div>
       </section>
-
-
-
-
-
-     
-
-      
-
     </article>
   </main>
 
@@ -1173,13 +1167,17 @@
   <!-- 
     - custom js link
   -->
-  <script src="./assets/js/script.js" defer></script>
+  <script src="js/script.js" defer></script>
 
   <!-- 
     - ionicon link
   -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
+
+
+
 
 </body>
 
